last-commit-before-responsiveness

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -2,7 +2,7 @@
     "projects": [
         {
             "leftRight": "left",
-            "imgSrc": "https://example.com/image1.jpg",
+            "imgSrc": "../../../assets/appo.png",
             "description": "A project that showcases a dynamic portfolio with responsive design.",
             "title": "Portfolio Website",
             "tags": "HTML, CSS, JavaScript",
@@ -11,7 +11,7 @@
         },
         {
             "leftRight": "right",
-            "imgSrc": "https://example.com/image2.jpg",
+            "imgSrc": "../../../assets/appo.png",
             "description": "An e-commerce platform for selling digital products.",
             "title": "E-Commerce App",
             "tags": "React, Node.js, MongoDB",
@@ -20,7 +20,7 @@
         },
         {
             "leftRight": "left",
-            "imgSrc": "https://example.com/image3.jpg",
+            "imgSrc": "../../../assets/appo.png",
             "description": "A blog platform with a rich text editor and user authentication.",
             "title": "Blog Platform",
             "tags": "Angular, Firebase, TypeScript",
